--- a/application/views/layouts/main.twig
+++ b/application/views/layouts/main.twig
@@ -31,8 +31,12 @@
 
               <!-- 中心大標區塊 START -->
               <div class="page-title text-center">
-                <h2>CodeIgniter 3 <span class="primary">Demo Project</span> <span class="title-bg">SIDE PROJECT</span></h2>
-                <p>Now , You are in main page.</p>
+                
+                <a href="/" title="Back To Index">
+                  <h2>CodeIgniter 3 <span class="primary">Demo Project</span> <span class="title-bg">SIDE PROJECT</span></h2>
+                  <p>Welcome！ {{ userRealName }}</p>
+                </a>
+
               </div>
               <!-- 中心大標區塊 END -->
 
