--- a/application/views/account/login_form.twig
+++ b/application/views/account/login_form.twig
@@ -11,7 +11,7 @@
       <span class="bar-primary"></span>
     </div>
 
-    <form id="contact-form" class="row contact-form no-gutter" action="#" method="post">
+    <form id="dataForm" class="row contact-form no-gutter" action="/accounts/login" method="post">
 
       <div class="col-xs-12 col-sm-12">
         <div class="input-field">
@@ -30,6 +30,7 @@
       <div class="col-xs-12 col-sm-6">
         <div class="input-field">
           <span class="btn-border">
+            <input type="hidden" name="{{ csrfName }}" value="{{ csrfHash }}">
             <button type="submit" class="btn btn-primary btn-custom-border text-uppercase">Login Account</button>
           </span>
         </div>
@@ -45,7 +46,17 @@
         </div>
         <div class="msg-success">Your Message was sent successfully</div>
         <div class="msg-failed">Something went wrong, please try again later</div>
-      </div> 
+      </div>
+
+      <!-- <div class="col-xs-12 col-sm-12">
+        <div class="input-field">
+          <span class="btn-border">
+            <a href="/" class="btn btn-primary btn-custom-border text-uppercase">Back To Index</a>
+          </span>
+        </div>
+        <div class="msg-success">Your Message was sent successfully</div>
+        <div class="msg-failed">Something went wrong, please try again later</div>
+      </div> -->
       
     </form> 
   </div>
