--- a/application/views/index.twig
+++ b/application/views/index.twig
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="hexagon-menu services clear">
 
-  <!-- 登入按鈕 START -->
-  <a href="accounts/login">
+  <!-- 會員按鈕 START -->
+  <a href="accounts/edit/set">
     <div class="service-hex">
 
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
@@ -18,13 +18,35 @@
         <div class="icon">
           <i class="et-line icon-lightbulb"></i>
         </div>
-        <h4>Accounts <br> Login</h4>
-        <p>Account Login</p>
+        <h4>Accounts <br> Center</h4>
+        <p>Handle things related to system accounts</p>
       </div>
 
     </div>
   </a>
-  <!-- 登入按鈕 END -->
+  <!-- 會員按鈕 END -->
+
+  <!-- 登入、登出按鈕 START -->
+  <a href="accounts/{{ action }}">
+    <div class="service-hex">
+
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
+        <g>
+          <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4" />
+          <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131" />
+        </g>
+      </svg>
+
+      <div class="content">
+        <div class="icon">
+          <i class="et-line icon-lightbulb"></i>
+        </div>
+        <h4>Accounts <br> {{ actionName }}</h4>
+      </div>
+
+    </div>
+  </a>
+  <!-- 登入、登出按鈕 END -->
 
 </div>
 {% endblock %}
