system setting adjustment

--- a/application/views/layouts/main.twig
+++ b/application/views/layouts/main.twig
@@ -33,7 +33,7 @@
               <div class="page-title text-center">
                 
                 <a href="/" title="Back To Index">
-                  <h2>CodeIgniter 3 <span class="primary">Demo Project</span> <span class="title-bg">SIDE PROJECT</span></h2>
+                  <h2>CodeIgniter 3 <br><span class="primary">Demo Project</span> <span class="title-bg">SIDE PROJECT</span></h2>
                   <p>Welcome！ {{ userRealName }}</p>
                 </a>
 
