--- a/application/views/backend/accounts/edit_form.twig
+++ b/application/views/backend/accounts/edit_form.twig
@@ -37,7 +37,7 @@
                 <div class="form-group row">
                     <label for="account_phone" class="col-sm-3 col-form-label">手機</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" name="account_phone" id="account_phone" value="{{ dbData.account_phone }}" placeholder="手機">
+                        <input type="text" class="form-control" name="account_phone" id="account_phone" value="{{ dbData.account_phone }}" placeholder="手機格式: 09XX-XXX-XXX">
                     </div>
                 </div>
                 <div class="form-group row">
