前台第二版型部屬 and 後台dashboard設定

--- a/application/views/backend/layouts/header.twig
+++ b/application/views/backend/layouts/header.twig
@@ -1,13 +1,15 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>CI 3 Demo 後台系統</title>
+<title>{{ webTitle }} 後台系統</title>
 <!-- plugins:css -->
 <link rel="stylesheet" href="/assets/backend/vendors/mdi/css/materialdesignicons.min.css">
 <link rel="stylesheet" href="/assets/backend/vendors/css/vendor.bundle.base.css">
 <!-- endinject -->
 <!-- Plugin css for this page -->
 <link rel="stylesheet" href="/assets/backend/vendors/flag-icon-css/css/flag-icon.min.css">
+<link rel="stylesheet" href="/assets/backend/vendors/owl-carousel-2/owl.carousel.min.css">
+<link rel="stylesheet" href="/assets/backend/vendors/owl-carousel-2/owl.theme.default.min.css">
 <!-- End plugin css for this page -->
 <!-- inject:css -->
 <!-- endinject -->
