--- a/application/views/backend/layouts/script.twig
+++ b/application/views/backend/layouts/script.twig
@@ -9,3 +9,7 @@
 <script src="/assets/backend/js/misc.js"></script>
 <script src="/assets/backend/js/settings.js"></script>
 <!-- endinject -->
+
+<script src="/assets/backend/vendors/owl-carousel-2/owl.carousel.min.js"></script>
+
+<script src="/assets/backend/js/dashboard.js"></script>
