--- a/application/views/frontend_1/index.twig
+++ b/application/views/frontend_1/index.twig
@@ -1,4 +1,4 @@
-{% extends 'frontend/layouts/main.twig' %}
+{% extends 'frontend_1/layouts/main.twig' %}
 
 {% block content %}
 <div class="hexagon-menu services clear">
@@ -18,7 +18,7 @@
         <div class="icon">
           <i class="et-line icon-lightbulb"></i>
         </div>
-        <h4>members <br> Center</h4>
+        <h4>Member <br> Center</h4>
         <p>Handle things related to system members</p>
       </div>
 
@@ -41,7 +41,7 @@
         <div class="icon">
           <i class="et-line icon-lightbulb"></i>
         </div>
-        <h4>members <br> {{ actionName }}</h4>
+        <h4>Member <br> {{ actionName }}</h4>
       </div>
 
     </div>
