--- a/application/views/backend/index.twig
+++ b/application/views/backend/index.twig
@@ -1,5 +1,155 @@
 {% extends 'backend/layouts/main.twig' %}
 
 {% block content %}
+<div class="row">
+
+    <div class="col-md-6 col-xl-4 grid-margin stretch-card">
+      <div class="card">
+        <div class="card-body">
+
+          <div class="d-flex flex-row justify-content-between">
+            <h4 class="card-title">網站設定</h4>
+          </div>
+
+          <div class="preview-list">
+
+            <div class="preview-item border-bottom">
+              <div class="preview-item-content d-flex flex-grow">
+                <div class="flex-grow">
+                  <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                    <h6 class="preview-subject">網站 Title</h6>
+                  </div>
+                  <input type="text" class="form-control" id="webTitle" value="{{ webTitle }}">
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="d-flex py-4">
+            <div class="preview-list w-100">
+              <div class="preview-item p-0">
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block" id="saveSetting"><i class="mdi mdi-file-check btn-icon-prepend"></i> 資料儲存 </button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- 圖片 -->
+    <div class="col-md-6 col-xl-4 grid-margin stretch-card">
+      <div class="card">
+        <div class="card-body">
+
+          <h4 class="card-title">前台版型設定</h4>
+
+          <div class="owl-carousel owl-theme full-width owl-carousel-dash portfolio-carousel" id="owl-carousel-basic">
+            <div class="item">
+                <div>版型一 <span class="text-success current-template-text-01">{{ currentTemplateText01 }}</span> </div>
+              <img src="/assets/backend/images/template01.jpg" alt="">
+            </div>
+            <div class="item">
+                <div>版型二 <span class="text-success current-template-text-02">{{ currentTemplateText02 }}</span> </div>
+              <img src="/assets/backend/images/template02.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="d-flex py-4">
+            <div class="preview-list w-100">
+              <div class="preview-item p-0">
+                <button type="button" class="btn btn-outline-warning btn-lg btn-block" id="chgTemplate"><i class="mdi mdi-reload btn-icon-prepend"></i> 版型切換 </button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+</div>
+
+<script>
+
+    $('#chgTemplate').click(function(){
+        
+        $.ajax({
+
+            url: "/admin/templateChange",
+            type: "POST",
+            dataType: "json",
+            data: {
+                '{{ csrfName }}' : '{{ csrfHash }}'
+            },
+        
+            success: function (data) {
+
+                if (data.status == 'YES') {
+                    
+                    if (data.data.frontend_template == 1) {
+                        
+                        $('.current-template-text-01').text("(目前版型)");
+                        $('.current-template-text-02').text("");
+
+                    } else {
+                        
+                        $('.current-template-text-01').text("");
+                        $('.current-template-text-02').text("(目前版型)");
+
+                    }
+
+                } 
+
+                alert(data.message);
+
+            },
+
+            error: function (a) {
+                // console.log(a);
+
+                alert('發生無預期的異常。');
+
+            }
+        });
+
+    })
+    
+    $('#saveSetting').click(function(){
+        
+        $.ajax({
+
+            url: "/admin/saveSetting",
+            type: "POST",
+            dataType: "json",
+            data: {
+                web_title: $('#webTitle').val(),
+                '{{ csrfName }}': '{{ csrfHash }}',
+            },
+        
+            success: function (data) {
+                // console.log(data);
+
+                if (data.status == 'YES') {
+                    
+                    $('title').text(data.data.web_title + ' 後台系統');
+
+                }
+
+                alert(data.message);
+
+            },
+
+            error: function (a) {
+                // console.log(a);
+
+                alert('發生無預期的異常。');
+
+            }
+        });
+
+    })
+
+</script>
 
 {% endblock %}
