--- a/application/views/frontend_1/layouts/header.twig
+++ b/application/views/frontend_1/layouts/header.twig
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>CI 3 Demo</title>
+<title>{{ webTitle }}</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Portfolio HTML Template">
@@ -9,19 +9,19 @@
 
 <link rel="stylesheet"
 href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-<link rel="stylesheet" href="/assets/frontend/plugins/bootstrap/bootstrap.min.css">
-<link rel="stylesheet" href="/assets/frontend/plugins/animate.css">
-<link rel="stylesheet" href="/assets/frontend/plugins/slick/slick.css">
-<link rel="stylesheet" href="/assets/frontend/plugins/slick/slick-theme.css">
+<link rel="stylesheet" href="/assets/frontend_1/plugins/bootstrap/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/frontend_1/plugins/animate.css">
+<link rel="stylesheet" href="/assets/frontend_1/plugins/slick/slick.css">
+<link rel="stylesheet" href="/assets/frontend_1/plugins/slick/slick-theme.css">
 
 <!-- Main Stylesheet -->
-<link rel="stylesheet" href="/assets/frontend/css/style.css">
+<link rel="stylesheet" href="/assets/frontend_1/css/style.css">
 
 <!-- Theme Stylesheet -->
 <link rel="stylesheet" href="#" id="color-changer">
 
 <!--Favicon-->
-<link rel="icon" href="/assets/frontend/images/favicon.png" type="image/x-icon">
+<link rel="icon" href="/assets/frontend_1/images/favicon.png" type="image/x-icon">
 
 <!-- Jquery -->
-<script src="/assets/frontend/plugins/jquery-2.2.4.min.js"></script>
+<script src="/assets/frontend_1/plugins/jquery-2.2.4.min.js"></script>
