--- a/application/views/frontend_1/layouts/main.twig
+++ b/application/views/frontend_1/layouts/main.twig
@@ -3,7 +3,7 @@
 
 <head>
 
-  {% include 'frontend/layouts/header.twig' %}
+  {% include 'frontend_1/layouts/header.twig' %}
 
 </head>
 
@@ -66,7 +66,7 @@
     </div>
   </section>
 
-  {% include 'frontend/layouts/script.twig' %}
+  {% include 'frontend_1/layouts/script.twig' %}
   
 </body>
 
