--- a/application/views/frontend_1/login/login_form.twig
+++ b/application/views/frontend_1/login/login_form.twig
@@ -1,5 +1,5 @@
 
-{% extends 'frontend/layouts/main.twig' %}
+{% extends 'frontend_1/layouts/main.twig' %}
 
 {% block content %}
 
@@ -15,14 +15,14 @@
 
       <div class="col-xs-12 col-sm-12">
         <div class="input-field">
-          <span class="input-icon" id="member_name"><i class="tf-profile-male"></i></span>
+          <span class="input-icon" id="login_name"><i class="tf-profile-male"></i></span>
           <input type="text" class="form-control" name="login_name" id="login_name" placeholder="Enter your member" required>
         </div>
       </div>
 
       <div class="col-xs-12 col-sm-12">
         <div class="input-field">
-          <span class="input-icon" id="member_pwd"><i class="tf-ion-ios-locked"></i></span>
+          <span class="input-icon" id="login_pwd"><i class="tf-ion-ios-locked"></i></span>
           <input type="password" class="form-control" name="login_pwd" id="login_pwd" placeholder="Enter Your password" required>
         </div>
       </div>
@@ -59,6 +59,6 @@
       </div> -->
       
     </form> 
-  </div>
+</div>
 
-  {% endblock %}
+{% endblock %}
