自製Library調整&延展model資料夾結構調整&驗證機制調整

--- a/application/views/frontend_1/layouts/header.twig
+++ b/application/views/frontend_1/layouts/header.twig
@@ -13,6 +13,7 @@ href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sa
 <link rel="stylesheet" href="/assets/frontend_1/plugins/animate.css">
 <link rel="stylesheet" href="/assets/frontend_1/plugins/slick/slick.css">
 <link rel="stylesheet" href="/assets/frontend_1/plugins/slick/slick-theme.css">
+<link rel="stylesheet" href="/assets/frontend_1/plugins/themefisher-fonts/css/themefisher-fonts.min.css">  
 
 <!-- Main Stylesheet -->
 <link rel="stylesheet" href="/assets/frontend_1/css/style.css">
